@@ -29,7 +29,7 @@ if [ "$1" = "--noconfigure" ]; then
 fi
 
 if [ X"$@" = X  -a "X`uname -s`" = "XLinux" ]; then
-    ./configure --prefix=/usr --enable-shared "$@"
+    ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var "$@"
 else
     ./configure "$@"
 fi
