@@ -59,6 +59,8 @@
 	- permit cli setting of build root policies.
 	- fix: filter excluded paths before adding install prefixes (#8709).
 	- add i18n lookaside to PO catalogue(s) for i18n strings.
+	- try for /etc/rpm/macros.specspo so that specspo autoconfigures rpm.
+	- per-platform configuration factored into /usr/lib/rpm subdir.
 
 3.0.2 -> 3.0.3
 	- add --eval to find result of macro expansion.
